--- a/Front/frontMusic/src/index.css
+++ b/Front/frontMusic/src/index.css
@@ -26,10 +26,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 h1 {
