--- a/Front/frontMusic/src/pages/HomePage/Index.css
+++ b/Front/frontMusic/src/pages/HomePage/Index.css
@@ -19,13 +19,15 @@
 }
 
 .left-menu .logo-top {
-	height: 56px;
-	width: 220px;
-	padding: 1rem;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	margin: 0 24px;
+	padding-bottom: 6px;
 }
 
 .left-menu .logo-top img {
-	width: 123px;
+	height: 24px;
 }
 
 /* Card de Assinar agora no sidebar */
@@ -36,11 +38,13 @@
 	align-items: center;
 	background-color: #2692b7;
 	background-image: linear-gradient(56deg,#0087c1 13%,#89d7bb);
-	border-radius: 20px;
+	box-shadow: 0 4px 20px rgb(0 0 0 / 10%);
+	border-radius: 10px;
 	margin: 36px 16px 12px;
-    padding: 20px 16px;
+    padding: 16px 16px;
 
 	font-size: 13px;
+	font-family: Arial, Helvetica, sans-serif;
     font-weight: 200;
     line-height: 18px;
     margin-bottom: 13px;
