--- a/Front/frontMusic/src/pages/HomePage/Index.css
+++ b/Front/frontMusic/src/pages/HomePage/Index.css
@@ -98,7 +98,7 @@ body {
 
 .options {
 	width: 100%;
-	height: 100%;
+	height: auto;
 	display: flex;
 	flex-direction: column; 
 	justify-content: start;
@@ -130,7 +130,6 @@ body {
 
 .more-options {
 	width: 100%;
-	height: 15%;
 	display: flex;
 	justify-content: end;
 }
@@ -148,6 +147,7 @@ body {
 	transition: 400ms;
 	color: #a2a2ad;
 	cursor: pointer;
+	margin-bottom: 10px;
 }
 
 /* Estilização para os inputs e buttons do header */
