--- a/Front/frontMusic/src/pages/HomePage/Index.css
+++ b/Front/frontMusic/src/pages/HomePage/Index.css
@@ -29,6 +29,9 @@ body {
 	width: 100%;
 	background-color: #23232d;
 	border-top: 1px solid #45454e;
+	position: absolute;
+	bottom: 0;
+	z-index: 5;
 }
 
 .top {
@@ -245,27 +248,4 @@ header button {
 	color: #fff;
 	width: 100%;
 	outline: none;
-}
-
-/* Estilizando campo para adicionar artistas */
-
-.info-content {
-	width: 100%;
-	overflow-x: auto;
-	margin: 0;
-	height: 100vh;
-}
-
-.info-content::-webkit-scrollbar-track {
-	background-color: #191922;
-	border-left: 1px solid #45454e;
-}
-
-.info-content::-webkit-scrollbar {
-	width: 8px;
-}
-
-.info-content::-webkit-scrollbar-thumb {
-	background: #686666;
-	border-radius: 20px;
 }
