--- a/Front/frontMusic/src/components/Content/Musica/Music.css
+++ b/Front/frontMusic/src/components/Content/Musica/Music.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Ubuntu:wght@300&family=Work+Sans:wght@100&display=swap');
+
 /* Estilizando campo para adicionar artistas */
 
 .info-content {
@@ -164,8 +166,123 @@
 /* Estilizando o Feito para voce */
 
 .for-you {
-    background-color: yellowgreen;
     margin-top: 50px;
     width: 77vw;
-    height: 35vh;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.for-you .container-text {
+    width: 100%;
+    height: 5px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.for-you figure {
+    width: 100%;
+    height: calc(50vh - 5px);
+    display: flex;
+    align-items:center;
+    overflow-y: hidden;
+    overflow-x: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.for-you figure::-webkit-scrollbar {
+    display: none;
+}
+
+.for-you figure .gallery {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 40px;
+}
+
+.image-singer {
+    width: 264px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.image-singer p {
+    color: #fff;
+    cursor: pointer;
+    line-height: 18px;
+    font-size: 14px;
+    font-weight: 400;
+    font-family: Open Sans;
+}
+
+.image-singer p:hover {
+    text-decoration: underline;
+}
+
+.image-singer .image {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image-singer .image img {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 400ms;
+}
+
+
+.logo-daily {
+    background: linear-gradient(180deg,rgba(0,0,0,0) 50%,rgba(0,0,0,.7));
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    align-items: end;
+    color: #fff;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.logo-daily .svg-icon {
+    padding-bottom: 10px;
+    padding-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.play-button {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+}
+
+.play-button button {
+    border: none;
+    height: 55px;
+    width: 55px;
+    border-radius: 100%;
+    cursor: pointer;
+    display: grid;
+    place-items: center;
+}
+
+.play-button button svg {
+    width: 25px;
+    height: 25px;
 }
