--- a/Front/frontMusic/src/components/Cards/CardRectangle/CardRectangle.css
+++ b/Front/frontMusic/src/components/Cards/CardRectangle/CardRectangle.css
@@ -7,7 +7,7 @@
 }
 
 .rectangle {
-    width: 49%; /*retirar isso aqui */
+    width: 49%;
     display: flex;
     align-items: center;
     flex-direction: row;
