--- a/Front/frontMusic/src/components/Cards/CardCube/CardCube.css
+++ b/Front/frontMusic/src/components/Cards/CardCube/CardCube.css
@@ -6,16 +6,25 @@
     gap: 5px;
 }
 
-.image-cube img {
+.image-end {
     height: 264px;
-    width: 264px;
-    border-radius: 5px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
     transition: 400ms;
     cursor: pointer;
 }
 
-.image-cube img:hover {
-    opacity: 0.6;
+.image-end:hover {
+    opacity: 0.7;
+}
+
+.image-end img {
+    height: 264px;
+    width: 264px;
+    border-radius: 5px;
 }
 
 .image-cube span {
@@ -23,8 +32,6 @@
     font-size: 17px;
     line-height: 18px;
     font-weight: 500;
-    cursor: pointer;
-    margin-top: 5px;
 }
 
 .image-cube span:hover {
