--- a/Front/frontMusic/src/components/Cards/CardCube/CardCube.css
+++ b/Front/frontMusic/src/components/Cards/CardCube/CardCube.css
@@ -17,19 +17,64 @@
     transition: 400ms;
 }
 
-/* .image-end:hover {
-    opacity: 0.7;
-} */
-
 .image-end img {
     height: 264px;
     width: 264px;
     border-radius: 5px;
     position: absolute;
+    transition: 400ms;
 }
 
 .image-end img:hover{
     opacity: 0.6;
+}
+
+.play-button-cube{
+    position: relative;
+    z-index: 2;
+    width: 150px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin-left: 15px;
+    margin-bottom: 15px;
+    gap: 10px;
+}
+
+.play-button-cube button {
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 100px;
+    border: none;
+    background-color: #fff;
+    color: #000;
+    cursor: pointer;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);;
+}
+
+.play-button-cube button svg {
+    width: 18px;
+    height: 18px;
+}
+
+.btn {
+    display: none;
+}
+
+.add-button {
+    display: flex;
+    animation: opacity-animation 400ms normal;
+}
+
+@keyframes opacity-animation {
+    from {
+        opacity: 0;
+    } to {
+        opacity: 1;
+    }
 }
 
 .image-cube span {
@@ -47,16 +92,4 @@
     font-size: 16px;
     line-height: 18px;
     color: #a2a2ad;
-}
-
-.play-button-end{
-    position: relative;
-    z-index: 2;
-    width: 55px;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 15px;
-    margin-bottom: 15px;
 }
